# mirai

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  config.toml.example  docker-compose.yml  main.py  mirai.db  pyproject.toml  setup_env.sh  test_dreamer.py  test_heartbeat.py  test_loop.py  test_mira_tool.txt  test_temp.txt  test_tool_report.txt  test_workspace.py
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: antigravity-usage.md
docs/rfcs/: 0001-biological-memory-architecture.md  0002-reasoning-loop.md  0003-proactive-autonomy.md  0004-cron-service.md  0005-cron-json5-git.md
mirai/: bootstrap.py  config.py  cron.py  errors.py  integrations.py  logging.py  metrics.py  tracing.py
mirai/agent/: agent_dreamer.py  agent_loop.py  contract.py  dreamer.py  free_model_capabilities.py  free_providers.py  heartbeat.py  identity.py  loop.py  models.py  models_dev.py  prompt.py  providers.py  registry.py  registry_models.py
mirai/agent/im/: base.py  feishu.py  feishu_receiver.py
mirai/agent/providers/: __init__.py  anthropic.py  antigravity.py  base.py  embeddings.py  factory.py  message_converter.py  minimax.py  openai.py  quota.py
mirai/agent/tools/: base.py  config_tool.py  cron_tool.py  echo.py  editor.py  git.py  im.py  memory.py  model.py  shell.py  system.py  workspace.py
mirai/auth/: __init__.py  antigravity_auth.py  auth_cli.py
mirai/collaborator/: 01AN4Z048W7N7DF3SQ5G16CYAJ_SOUL.md  SOUL.template.md  manager.py  models.py
mirai/db/: duck.py  models.py  session.py
mirai/memory/: dreamer.py  models.py  vector_db.py
mirai/utils/: __init__.py  service.py
scripts/: restart.sh  seed_collaborators.py  test_antigravity_live.py  test_feishu_live.py
tests/: conftest.py  e2e_smoke.sh  test_action_layer.py  test_agent_loop.py  test_app_layer.py  test_auth.py  test_bootstrap.py  test_claude_compat.py  test_config.py  test_config_tool.py  test_cron.py  test_dreamer.py  test_duckdb_storage.py  test_e2e_cron_fire.py  test_e2e_cron_real_llm.py  test_e2e_cron_tool.py  test_e2e_feishu_agent.py  test_e2e_heartbeat.py  test_e2e_maintenance.py  test_failover.py  test_fallback_chain.py  test_feishu_provider.py  test_feishu_receiver.py  test_free_providers.py  test_heartbeat.py  test_identity.py  test_integration_executive.py  test_integration_full_stack.py  test_integration_memory.py  test_integrations.py  test_logging.py  test_loop.py  test_metrics.py  test_model_discovery.py  test_model_registry.py  test_models.py  test_models_dev.py  test_multimodal.py  test_prompt.py  test_property.py  (+18 more)
tests/data/: e2e_l3.duckdb  test_l3.duckdb
tests/mocks/: providers.py
watchdog/: Cargo.toml
watchdog/src/: main.rs
