[project]
name = "mirai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic>=0.79.0",
    "duckdb>=1.4.4",
    "fastapi>=0.128.7",
    "greenlet>=3.3.1",
    "lancedb>=0.29.2",
    "lark-oapi>=1.5.3",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-ulid>=3.1.0",
    "sqlmodel>=0.0.33",
    "uvicorn>=0.40.0",
]
