[project]
name = "mirai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic[vertex]>=0.79.0",
    "duckdb>=1.4.4",
    "fastapi>=0.128.7",
    "greenlet>=3.3.1",
    "httpx>=0.28.1",
    "lancedb>=0.29.2",
    "lark-oapi>=1.5.3",
    "openai>=1.80.0",
    "orjson>=3.10.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-ulid>=3.1.0",
    "sqlmodel>=0.0.33",
    "structlog>=25.1.0",
    "granian>=2.6.0",
    "tenacity>=9.1.4",
    "pydantic-settings>=2.12.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["mirai"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
explicit_package_bases = true
no_implicit_optional = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
