[project]
name = "mirai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "anthropic[vertex]>=0.79.0",
    "duckdb>=1.4.4",
    "fastapi>=0.128.7",
    "greenlet>=3.3.1",
    "httpx[http2]>=0.28.1",
    "lancedb>=0.29.2",
    "lark-oapi>=1.5.3",
    "openai>=1.80.0",
    "orjson>=3.10.0",
    "pandas>=3.0.0",
    "pyarrow>=23.0.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.1",
    "python-ulid>=3.1.0",
    "sqlalchemy>=2.0,<2.1",
    "sqlmodel>=0.0.33",
    "structlog>=25.1.0",
    "granian>=2.6.0",
    "tenacity>=9.1.4",
    "pydantic-settings>=2.12.0",
    "croniter>=2.0",
    "json5>=0.9",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation-fastapi>=0.60b1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.11.0",
    "mypy>=1.15.0",
    "pytest-cov>=6.0.0",
    "bandit>=1.7.0",
    "hypothesis>=6.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "TRY",  # tryceratops (exception handling)
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "B008",    # do not perform function calls in argument defaults
    "TRY003",  # long messages in raise (acceptable for domain errors)
    "TRY300",  # try-consider-else (noisy — return-in-try is idiomatic)
    "TRY301",  # raise-within-try (noisy — validation raises are fine)
    "TRY400",  # logging.error vs logging.exception (structlog compat)
    "SIM108",  # if-else-ternary (harms readability for complex expressions)
    "SIM105",  # contextlib.suppress (harms readability in async/cleanup code)
    "SIM114",  # if-with-same-arms (intentional for clarity)
    "SIM117",  # nested-with (more readable with complex mock contexts)
    "SIM102",  # collapsible-if (separate guards are more readable)
    "RET504",  # unnecessary-assign (named returns aid debugging)
]

[tool.ruff.lint.isort]
known-first-party = ["mirai"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
explicit_package_bases = true
no_implicit_optional = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
markers = [
    "smoke: lightweight tests suitable for CI fast-feedback",
]
addopts = "--cov=mirai --cov-report=term-missing --cov-report=html:htmlcov"

[tool.coverage.run]
source = ["mirai"]
omit = [
    "mirai/__pycache__/*",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "@abstractmethod",
]

[tool.pyre]
search_path = [
    ".",
    ".venv/lib/python3.11/site-packages",
]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B603", "B607"]
